# KappaSchedules

./: README.md  TODO.md  setup.cfg
.github/scripts/: update_version.py
.github/workflows/: publish.yaml
kappaschedules/: __init__.py  constant.py  cosine_decreasing.py  cosine_increasing.py  factory.py  linear_decreasing.py  linear_increasing.py  sequential_schedule.py
kappaschedules/base/: decreasing_progress_schedule.py  increasing_progress_schedule.py  progress_schedule.py  schedule_base.py
kappaschedules/functional/: schedules.py
kappaschedules/schedules/: __init__.py  constant_schedule.py  cosine_decreasing_schedule.py  cosine_increasing_schedule.py  custom_schedule.py  inverse_sqrt_decreasing_schedule.py  inverse_sqrt_increasing_schedule.py  linear_decreasing_schedule.py  linear_increasing_schedule.py  linear_warmup_cosine_decay.py  linear_warmup_cosine_decay_schedule.py  periodic_bool_schedule.py  polynomial_decreasing_schedule.py  polynomial_increasing_schedule.py  sequential_percent_schedule.py  sequential_schedule.py  sequential_step_schedule.py  step_decreasing_schedule.py  step_fixed_schedule.py  step_interval_schedule.py
tests_integration/: test_factory.py  test_warmup_cosine.py
tests_unit/: test_cosine.py  test_cosine_decreasing_schedule.py  test_cosine_increasing_schedule.py  test_linear.py  test_sequential_schedule.py  test_step_interval_schedule.py
tests_unit/schedules/: test_cosine_decreasing_schedule.py  test_custom_schedule.py  test_inverse_sqrt_decreasing_schedule.py  (+8 more)
tests_utils/: asserts.py  dummy_schedule.py
(+6 files in other folders)
